got css for options box and index definition working (although am using a new css file, not sure if this is the right thing?)

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -181,6 +181,8 @@ a:hover {
 }
 .span8 {
   width: 620px;
+  color:'purple';
+  border-width: 1px;
 }
 .span7 {
   width: 540px;
@@ -193,6 +195,10 @@ a:hover {
 }
 .span4 {
   width: 300px;
+  border-width:thin;
+  border-style:dotted;
+  border-color:black;
+  background-color:#ebebeb;
 }
 .span3 {
   width: 220px;
