border colour change, looking at getting right link for document

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -185,7 +185,7 @@ a:hover {
 .span7 {
   border-style:solid;
   border-width:thin;
-  border-color:black;
+  border-color:grey;
   margin-bottom:10px;
   padding:10px;
   box-shadow: 5px 5px 7px #ebebeb;
